@@ -41,30 +41,35 @@ Usage: $0 <shell_options> <framework_options>
      -xg                               exclude the specified group
      -xd                               exclude the specified directory
      -genOut                           generate .out file if not exist
-     -forceGenOut                      delete and generate .out file if not exist
+     -forceGenOut                      delete and generate .out file
      -parallel                         run tests using specified threads
+     -dockerSuiteParallel              run docker tests using specified threads
      -randomOrder                      run tests in a random order
+     -noKillDocker                     don't kill container when finish docker suites
+     -runMode                          if run docker suites, no need to setup external doris clusters.
+                                       user may specify run mode: cloud or not_cloud.
      -times                            rum tests {times} times
 
   Eg.
-    $0                                 build regression test framework and run all suite which in default group
-    $0 --run test_select               run a suite which named as test_select
-    $0 --run 'test*'                   run all suite which named start with 'test', note that you must quota with ''
-    $0 --run -s test_select            run a suite which named as test_select
-    $0 --run test_select -genOut       generate output file for test_select if not exist
-    $0 --run -g default                run all suite in the group which named as default
-    $0 --run -d demo,correctness/tmp   run all suite in the directories which named as demo and correctness/tmp
-    $0 --clean                         clean output of regression test framework
-    $0 --clean --run test_select       clean output and build regression test framework and run a suite which named as test_select
-    $0 --run -h                        print framework options
-    $0 --teamcity --run test_select    print teamcity service messages and build regression test framework and run test_select
+    $0                                        build regression test framework and run all suite which in default group
+    $0 --run test_select                      run a suite which named as test_select
+    $0 --compile                              only compile regression framework
+    $0 --run -s test_select                   run a suite which named as test_select
+    $0 --run test_select -genOut              generate output file for test_select if not exist
+    $0 --run -g default                       run all suite in the group which named as default
+    $0 --run -d demo,correctness/tmp          run all suite in the directories which named as demo and correctness/tmp
+    $0 --run -d regression-test/suites/demo   specify the suite directories path from repo root
+    $0 --clean                                clean output of regression test framework
+    $0 --clean --run test_select              clean output and build regression test framework and run a suite which named as test_select
+    $0 --run -h                               print framework options
+    $0 --teamcity --run test_select           print teamcity service messages and build regression test framework and run test_select
 
 Log path: \${DORIS_HOME}/output/regression-test/log
 Default config file: \${DORIS_HOME}/regression-test/conf/regression-conf.groovy
   "
     exit 1
 }
-
+ONLY_COMPILE=0
 CLEAN=0
 WRONG_CMD=0
 TEAMCITY=0
@@ -90,6 +95,16 @@ else
             TEAMCITY=1
             shift
             ;;
+        --conf)
+            CUSTOM_CONFIG_FILE="$2"
+            shift
+            shift
+            ;;
+        --compile)
+            RUN=1
+            ONLY_COMPILE=1
+            shift
+            ;;
         --run)
             RUN=1
             shift
@@ -104,9 +119,8 @@ else
     done
 fi
 
-if [[ "${WRONG_CMD}" -eq 1 ]]; then
+if [[ ${WRONG_CMD} -eq 1 ]]; then
     usage
-    exit 1
 fi
 
 # set maven
@@ -121,15 +135,26 @@ fi
 export MVN_CMD
 
 CONF_DIR="${DORIS_HOME}/regression-test/conf"
-CONFIG_FILE="${CONF_DIR}/regression-conf.groovy"
+if [[ -n "${CUSTOM_CONFIG_FILE}" ]] && [[ -f "${CUSTOM_CONFIG_FILE}" ]]; then
+    CONFIG_FILE="${CUSTOM_CONFIG_FILE}"
+    echo "Using custom config file ${CONFIG_FILE}"
+else
+    CONFIG_FILE="${CONF_DIR}/regression-conf.groovy"
+fi
 LOG_CONFIG_FILE="${CONF_DIR}/logback.xml"
 
 FRAMEWORK_SOURCE_DIR="${DORIS_HOME}/regression-test/framework"
 REGRESSION_TEST_BUILD_DIR="${FRAMEWORK_SOURCE_DIR}/target"
+FRAMEWORK_APACHE_DIR="${FRAMEWORK_SOURCE_DIR}/src/main/groovy/org/apache"
 
 OUTPUT_DIR="${DORIS_HOME}/output/regression-test"
 LOG_OUTPUT_FILE="${OUTPUT_DIR}/log"
 RUN_JAR="${OUTPUT_DIR}/lib/regression-test-*.jar"
+if [[ -z "${DORIS_THIRDPARTY}" ]]; then
+    export DORIS_THIRDPARTY="${DORIS_HOME}/thirdparty"
+fi
+
+rm -rf "${FRAMEWORK_APACHE_DIR}/doris/thrift"
 
 if [[ "${CLEAN}" -eq 1 ]]; then
     rm -rf "${REGRESSION_TEST_BUILD_DIR}"
@@ -143,21 +168,30 @@ fi
 
 if ! test -f ${RUN_JAR:+${RUN_JAR}}; then
     echo "===== Build Regression Test Framework ====="
+
+    # echo "Build generated code"
+    cd "${DORIS_HOME}/gensrc/thrift"
+    make
+
+    cp -rf "${DORIS_HOME}/gensrc/build/gen_java/org/apache/doris/thrift" "${FRAMEWORK_APACHE_DIR}/doris/"
+
     cd "${DORIS_HOME}/regression-test/framework"
     "${MVN_CMD}" package
     cd "${DORIS_HOME}"
 
     mkdir -p "${OUTPUT_DIR}"/{lib,log}
     cp -r "${REGRESSION_TEST_BUILD_DIR}"/regression-test-*.jar "${OUTPUT_DIR}/lib"
-fi
 
-# build jar needed by java-udf case
-JAVAUDF_JAR="${DORIS_HOME}/regression-test/java-udf-src/target/java-udf-case-jar-with-dependencies.jar"
-if ! test -f ${JAVAUDF_JAR:+${JAVAUDF_JAR}}; then
+    echo "===== BUILD JAVA_UDF_SRC TO GENERATE JAR ====="
     mkdir -p "${DORIS_HOME}"/regression-test/suites/javaudf_p0/jars
     cd "${DORIS_HOME}"/regression-test/java-udf-src
     "${MVN_CMD}" package
     cp target/java-udf-case-jar-with-dependencies.jar "${DORIS_HOME}"/regression-test/suites/javaudf_p0/jars/
+    # be and fe dir is compiled output
+    mkdir -p "${DORIS_HOME}"/output/fe/custom_lib/
+    mkdir -p "${DORIS_HOME}"/output/be/custom_lib/
+    cp target/java-udf-case-jar-with-dependencies.jar "${DORIS_HOME}"/output/fe/custom_lib/
+    cp target/java-udf-case-jar-with-dependencies.jar "${DORIS_HOME}"/output/be/custom_lib/
     cd "${DORIS_HOME}"
 fi
 
@@ -181,14 +215,18 @@ fi
 
 echo "===== Run Regression Test ====="
 
+# if use jdk17, add java option "--add-opens=java.base/java.nio=ALL-UNNAMED"
 if [[ "${TEAMCITY}" -eq 1 ]]; then
     JAVA_OPTS="${JAVA_OPTS} -DstdoutAppenderType=teamcity -Xmx2048m"
 fi
 
-"${JAVA}" -DDORIS_HOME="${DORIS_HOME}" \
-    -DLOG_PATH="${LOG_OUTPUT_FILE}" \
-    -Dlogback.configurationFile="${LOG_CONFIG_FILE}" \
-    ${JAVA_OPTS:+${JAVA_OPTS}} \
-    -jar ${RUN_JAR:+${RUN_JAR}} \
-    -cf "${CONFIG_FILE}" \
-    ${REGRESSION_OPTIONS_PREFIX:+${REGRESSION_OPTIONS_PREFIX}} "$@"
+if [[ "${ONLY_COMPILE}" -eq 0 ]]; then
+    "${JAVA}" -DDORIS_HOME="${DORIS_HOME}" \
+        -DLOG_PATH="${LOG_OUTPUT_FILE}" \
+        -Dfile.encoding="UTF-8" \
+        -Dlogback.configurationFile="${LOG_CONFIG_FILE}" \
+        ${JAVA_OPTS:+${JAVA_OPTS}} \
+        -jar ${RUN_JAR:+${RUN_JAR}} \
+        -cf "${CONFIG_FILE}" \
+        ${REGRESSION_OPTIONS_PREFIX:+${REGRESSION_OPTIONS_PREFIX}} "$@"
+fi
